--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>SlickSpeed Selectors Test</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
-	
-	<script src="config/frameworks.js" type="text/javascript"></script>
-	<script src="config/selectors.js" type="text/javascript"></script>
 	<script src="system/slickspeed.js" type="text/javascript"></script>
+	<script src="config/frameworks.js" type="text/javascript"></script>
+	<script src="config/selectors.js" type="text/javascript"></script>	
 </head>
 
 <body>
@@ -30,7 +29,7 @@
 	
 	<div id="frames"></div>
   <script type="text/javascript">
-    buildFrames();
+    SlickSpeed.buildFrames();
   </script>
 <table>
 
@@ -38,7 +37,7 @@
 		<tr>
 			<th class="selectors-title">selectors</th>
 			<script type="text/javascript">
-			forEach(window.frameworks, function(f) {
+			SlickSpeed.forEach(SlickSpeed.frameworks, function(f) {
 			  document.write("<th class='framework'>" + f.name + "</th>");
 			});
 			</script>
@@ -47,9 +46,9 @@
 
 	<tbody id="tbody">
 		<script type="text/javascript">
-		forEach(window.selectors, function(s) {
+		SlickSpeed.forEach(SlickSpeed.selectors, function(s) {
 		  document.write("<tr><th class='selector'>" + s + "</th>");
-		  forEach(window.frameworks, function(f) {
+		  SlickSpeed.forEach(SlickSpeed.frameworks, function(f) {
 		    document.write("<td class='empty'></td>");
 		  });
 		  document.write("</tr>");
@@ -61,7 +60,7 @@
 		<tr>
 		<th class="score-title"><strong>final time (less is better)</strong></th>
 		<script type="text/javascript">
-		forEach(window.frameworks, function(f) {
+		SlickSpeed.forEach(SlickSpeed.frameworks, function(f) {
 		  document.write("<td class='score'>0</td>");
 		});
 		</script>
